Langdel, Before trying Twillo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:9.6.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.orhanobut:logger:1.15'
+    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
 
 
 }
