--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,21 +24,24 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             useProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
-            minifyEnabled true
-            useProguard true
+            minifyEnabled false
+            useProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    lintOptions {
+        abortOnError false
+    }
     dexOptions {
         incremental true
+        jumboMode true
         maxProcessCount 2
-        javaMaxHeapSize "2g"
+        javaMaxHeapSize "12g"
     }
     packagingOptions {
         exclude 'META-INF/LICENSE'
