--- a/backendgcm/src/main/webapp/WEB-INF/web.xml
+++ b/backendgcm/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>com.jackleeentertainment.oq.backendgcm.RegistrationEndpoint,
+            <param-value>
                 com.jackleeentertainment.oq.backendgcm.MessagingEndpoint
             </param-value>
         </init-param>
