--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.googlecode.libphonenumber:libphonenumber:7.7.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'konifar:fab-transformation:1.0.0'
+
     testCompile 'junit:junit:4.12'
     compile project(path: ':backendgcm', configuration: 'android-endpoints')
 }
