--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     compile 'com.googlecode.libphonenumber:libphonenumber:7.7.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'konifar:fab-transformation:1.0.0'
+    compile 'com.rmtheis:tess-two:6.0.4'
 
     testCompile 'junit:junit:4.12'
     compile project(path: ':backendgcm', configuration: 'android-endpoints')
