--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".ui.layout.activity.ProgressActivity"
+            android:name=".ui.layout.activity.progress.ProgressActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
             >
