--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,20 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+
+
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.layout.activity.progress.NewOQProgressActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+            >
+        </activity>
+
+
+
+
         <activity
             android:screenOrientation="portrait"
             android:name=".ui.layout.activity.MainActivity"
